--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     {
       "name": "vue 默认模板",
       "short": "vue 默认模板",
-      "value": "*",
-      "branch": "*",
+      "value": "git@github.com:shang1219178163/shang-cli.git",
+      "branch": "",
       "directory": "packages/*"
     },
     {
